[project]
name = "distributed-audit-hub"
version = "0.1.0"
description = ""
authors = [
    {name = "Argenis Vargas", email = "argenis1818@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flake8>=7.3.0,<8.0.0",
    "black>=25.11.0,<26.0.0",
    "isort>=7.0.0,<8.0.0",
    "httpx>=0.28.1,<0.29.0",
    "python-dotenv>=1.2.1,<2.0.0",
    "django>=5.2.8,<6.0.0",
    "fastapi>=0.122.0,<0.123.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "pytest-django>=4.11.1,<5.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "factory-boy>=3.3.3,<4.0.0",
    "boto3>=1.41.5,<2.0.0",
    "pyjwt>=2.10.1,<3.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "dj-database-url>=3.0.1,<4.0.0",
    "structlog>=25.5.0,<26.0.0", # 🌟 Ordenado antes de los servidores

    # ---------------------------------------------
    # 🌟 Las dependencias de Servidor y BD al final para claridad
    # ---------------------------------------------
    # Servidor ASGI (para FastAPI y Django asíncrono)
    "uvicorn[standard]>=0.38.0,<0.39.0",
    # Servidor WSGI (para Gunicorn/Django síncrono)
    "gunicorn>=22.0.0,<23.0.0",
    # Driver de PostgreSQL (Se prefiere psycopg en producción)
    "psycopg2-binary>=2.9.11,<3.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  | migrations
  | \.git
  | \.pytest_cache
)/
'''

[tool.isort]
profile = "black"
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["apps"]
line_length = 79
include_trailing_comma = true
multi_line_output = 3
skip = ["migrations", "__init__.py", "manage.py"]
import_heading_stdlib = "Standard Libraries"
import_heading_future = "Future Libraries"
import_heading_django = "Django Libraries"
import_heading_thirdparty = "Third-party Libraries"
import_heading_localfolder = "Local Folders Libraries"
import_heading_firstparty = "Own Libraries"
known_third_party = ["pytest", "toml"]

[tool.flake8]
ignore = [
    "S101", "E203", "E266", "E501", "W503", "E402",
    "E731", "B950", "B011", "B014", "N812", "N804", "C901"
]
max-line-length = 79
select = ["N", "B", "C", "E", "F", "S", "W", "T4", "B9"]
docstring-convention = "google"
per-file-ignores = [
    "config/settings/*:F405",
    "__init__.py:F401"
]
exclude = [
    "tests/",
    "migrations/*",
    "__pycache__/",
    ".git/",
    ".pytest_cache/"
]
max-complexity = 10

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--ds=config.settings.local"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

# Configuración adicional para entornos
[tool.django]
settings_module = "config.settings.local"

# Si usas mypy en el futuro
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
